--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   snapserver:
     container_name: snapserver
@@ -16,14 +14,16 @@ services:
     restart: always
 
   mpd:
-    image: ghcr.io/chiefy/dockerfiles/mpd@sha256:1a7fc1403d2b201d496a30247d4525464ab144010065d38e072db1c46300a055
+    image: ghcr.io/chiefy/alpine-mpd:latest
+#    image: ghcr.io/chiefy/dockerfiles/mpd@sha256:1a7fc1403d2b201d496a30247d4525464ab144010065d38e072db1c46300a055
     container_name: mpd
     ports:
       - "6600:6600"
     restart: always
     volumes:
       - /mnt/Config/mpd/mpd.conf:/etc/mpd.conf
-      - /usr/share/mpd:/var/lib/mpd
+      - /usr/share/alpine-mpd:/var/lib/mpd
+      #- /usr/share/mpd:/var/lib/mpd
       - /mnt/Config/mpd/playlists/:/var/lib/mpd/playlists
       - /mnt/Music:/mnt/Music:ro
       - snapfifo:/tmp/snapfifo
