Add VERBOSE environment variable to service

--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -24,6 +24,8 @@ services:
       - SYS_NICE
       - SYS_PTRACE
       - PERFMON
+    environment:
+      VERBOSE: ${VERBOSE}
     volumes:
       - /mnt/Config/mpd/mpd.conf:/etc/mpd.conf
       - /usr/share/alpine-mpd:/var/lib/mpd
