--- a/docker-compose-seafile.yaml
+++ b/docker-compose-seafile.yaml
@@ -8,7 +8,7 @@ services:
       - MYSQL_LOG_CONSOLE=true
       - MARIADB_AUTO_UPGRADE=1
     volumes:
-      - /opt/seafile/mysql/db:/var/lib/mysql # Required, specifies the path to MySQL data persistent store.
+      - /usr/share/seafile/mysql/db:/var/lib/mysql # Required, specifies the path to MySQL data persistent store.
     networks:
       - seafile-net
 
@@ -27,7 +27,7 @@ services:
     ports:
       - "9080:80"
     volumes:
-      - /opt/seafile/seafile-data:/shared # Required, specifies the path to Seafile data persistent store.
+      - /usr/share/seafile/seafile-data:/shared # Required, specifies the path to Seafile data persistent store.
     environment:
       - DB_HOST=db
       - DB_ROOT_PASSWD=${MYSQL_ROOT_PASSWORD}
